<resources>
    <string name="app_name">String</string>
    <string name="facebook_app_id">700970877384605</string>
    <string name="fb_login_protocol_scheme">fb700970877384605</string>
    <string name="MenuTitle">Discover the Endless Possibilities of travel</string>
    <string name="sign_up_button_text">Sign Up with email</string>
    <string name="sign_up_with_facebook_button_text">Sign up with facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="enter_your_name_optional">Enter your name (optional)</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="username">Username</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="i_have_read_and_agree_to_string_s">I have read and agree to String\'s Terms of Service</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_into_your_account">Log into your account</string>
    <string name="check_your_email_and_click_on_the_verification_link_to_activate_your_account">Check your email and click on the verification link to activate your account</string>
    <string name="resend_email">Resend Email</string>
    <string name="open_mail_app">open mail app</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="with_facebook">with Facebook</string>
    <string name="or">or</string>
    <string name="menu_backdrop">Menu backdrop</string>
    <string name="logo">logo</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_title">I have read and agree to String\'s</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="verify_backdrop">Verify Backdrop</string>
    <string name="a_verification_email_has_been_sent_to">A verification email has been sent to:</string>
    <string name="notification_permissions_image">notification permissions image</string>
    <string name="enable_notifications">ENABLE NOTIFICATIONS</string>
    <string name="notification_permission_description">Be in the know whenever you receive messages, new followers and more</string>
    <string name="okay">Okay</string>
    <string name="maybe_later">Maybe later</string>
    <string name="more">MORE</string>
    <string name="share_to">Share to...</string>
    <string name="copy_link">Copy Link</string>
    <string name="report">Report</string>
</resources>