<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.StartFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/kv"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/menu_backdrop" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/MenuTitle"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <Button
        android:id="@+id/sign_up_with_email_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_button_text"
        app:layout_constraintCircleRadius="100dp"
        android:textColor="@color/textColorLight"
        android:background="@drawable/sign_up_with_email_button"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/sign_up_with_facebook_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/sign_up_with_facebook_button"
        android:text="@string/sign_up_with_facebook_button_text"
        android:textColor="@color/textColorLight"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_with_email_button"
        app:layout_constraintStart_toStartOf="@+id/sign_up_with_email_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_with_email_button" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_with_facebook_button"
        app:layout_constraintStart_toStartOf="@+id/sign_up_with_facebook_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_with_facebook_button" />

    <Button
        android:id="@+id/move_to_log_in_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/log_in"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_button_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>