<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/permissions_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/notification_permission_image"
            android:contentDescription="@string/notification_permissions_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/permission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_notifications"
            android:layout_margin="15dp"
            android:textSize="14sp"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permissions_image" />

        <TextView
            android:id="@+id/permission_description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notification_permission_description"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permission_title" />

        <Button
            android:id="@+id/accept_permission_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/sign_up_button"
            android:text="@string/okay"
            android:textColor="@color/textColorLight"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permission_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maybe_later"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/accept_permission_button"
            app:layout_constraintStart_toStartOf="@+id/accept_permission_button"
            app:layout_constraintTop_toBottomOf="@+id/accept_permission_button" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>