<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:gravity="center_horizontal"
            android:text="@string/log_into_your_account"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/back_button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableStart="@drawable/back_icon_32" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_marginTop="20dp"
            android:background="@color/hr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign_up_with_facebook_button"
            android:text="@string/with_facebook"
            android:textColor="@color/textColorLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_bar" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/or" />

        <EditText
            android:id="@+id/email_edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_address"
            android:layout_marginHorizontal="20dp"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:background="@null"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5"
            android:autofillHints="@string/email" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/hr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text_login" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <EditText
            android:id="@+id/password_edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:layout_marginHorizontal="20dp"
            android:textSize="18sp"
            android:background="@null"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6"
            android:autofillHints="@string/password" />



        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/hr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text_login" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:clickable="true"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view7"
            android:focusable="true" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/log_in"
            android:textColor="@color/textColorLight"
            android:background="@drawable/log_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/error_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/errorBar"
            android:gravity="center"
            android:textColor="@color/textColorLight"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:visibility="gone"/>


        <ProgressBar
            android:id="@+id/loading_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>